fix(step): use span and vertical-alignment

--- a/packages/core/src/components/stepper/step/step.scss
+++ b/packages/core/src/components/stepper/step/step.scss
@@ -9,10 +9,6 @@
   position: relative;
   display: table-cell;
 
-  tds-icon {
-    line-height: 1;
-  }
-
   [role='listitem'] {
     display: flex;
     justify-content: start;
@@ -32,6 +28,14 @@
       .content-container {
         height: 30px;
         min-width: 30px;
+
+        tds-icon {
+          vertical-align: bottom;
+        }
+
+        .index-container {
+          vertical-align: sub;
+        }
       }
 
       &.vertical {
@@ -168,9 +172,7 @@
     .content-container {
       border-radius: 100px;
       border: 1px solid var(--tds-stepper-icon-background);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      text-align: center;
       position: relative;
 
       &.error {
